--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -98,6 +98,9 @@
     <string name="heading_interval_s">Intervalle pour recalculer l\'orientation</string>
     <string name="heading_interval_t">Intervalle de l\'orientation</string>
 
+<string name="reference_altitude_s">Manual set reference altitude</string>
+    <string name="reference_altitude_t">Reference altitude</string>
+    
     <string-array name="units_system_names">
         <item>Métrique</item>
         <item>Impérial</item>
