--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -98,6 +98,8 @@
     <string name="location_history_t">Location history</string>
     <string name="heading_interval_s">Interval to recompute heading</string>
     <string name="heading_interval_t">Heading interval</string>
+    <string name="reference_altitude_s">Manual set reference altitude</string>
+    <string name="reference_altitude_t">Reference altitude</string>
     <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
