--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -98,8 +98,13 @@
     <string name="location_history_t">Localisation de l\'historique</string>
     <string name="heading_interval_s">Intervalle pour recalculer l\'orientation</string>
     <string name="heading_interval_t">Intervalle de l\'orientation</string>
-
-<string name="reference_altitude_s">Manual set reference altitude</string>
+    <string name="auto_track_s">Auto débuter l\'enregistrement</string>
+    <string name="auto_track_t">Auto débuter l\'enregistrement</string>
+    <string name="yes">Oui</string>
+    <string name="no">Non</string>
+    <string name="recordTrack_q">débuter l\'enregistrement?</string>
+    
+	<string name="reference_altitude_s">Manual set reference altitude</string>
     <string name="reference_altitude_t">Reference altitude</string>
     
     <string-array name="units_system_names">
