--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -100,7 +100,12 @@
     <string name="heading_interval_s">Interval to recompute heading</string>
     <string name="heading_interval_t">Heading interval</string>
     <string name="reference_altitude_s">Manual set reference altitude</string>
-    <string name="reference_altitude_t">Reference altitude</string>
+    <string name="reference_altitude_t">Reference altitude</string>    
+    <string name="auto_track_s">Start tracking when application starts</string>
+    <string name="auto_track_t">Auto start tracking</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="recordTrack_q">Start recording this track?</string>
     <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
