--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -102,7 +102,8 @@
     <string name="auto_track_t">Auto débuter l\'enregistrement</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
-    <string name="recordTrack_q">débuter l\'enregistrement?</string>
+    <string name="recordTrack_q">Débuter l\'enregistrement?</string>
+    <string name="altitude_from_gps">Altitude de la GPS: %1$s</string>
     
 	<string name="reference_altitude_s">Manual set reference altitude</string>
     <string name="reference_altitude_t">Reference altitude</string>
