--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -105,6 +105,8 @@
     <string name="no">Nu</string>
     <string name="recordTrack_q">Pornesc inregistratea traseului?</string>    
     
+<string name="altitude_from_gps">Altitudea de la GPS: %1$s</string>    
+    
     <string name="reference_altitude_s">Selectare altitudine referinta</string>
     <string name="reference_altitude_t">Setare altitudine</string>
     
