Update with le bt support

--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -103,12 +103,14 @@
     <string name="auto_track_t">Inregistrare automata</string>
     <string name="yes">Da</string>
     <string name="no">Nu</string>
-    <string name="recordTrack_q">Pornesc inregistratea traseului?</string>    
-    
-<string name="altitude_from_gps">Altitudea de la GPS: %1$s</string>    
+    <string name="recordTrack_q">Pornesc inregistratea traseului?</string>
+    <string name="altitude_from_gps">Altitudea de la GPS: %1$s</string>    
     
     <string name="reference_altitude_s">Selectare altitudine referinta</string>
     <string name="reference_altitude_t">Setare altitudine</string>
+    
+    <string name="use_sensbox_s">Foloseste BT Flytech Sensbox</string>
+    <string name="use_sensbox_t">Foloseste Sensbox</string>
     
     <string-array name="units_system_names">
         <item>Metric</item>
