--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -108,6 +108,9 @@
 	<string name="reference_altitude_s">Manual set reference altitude</string>
     <string name="reference_altitude_t">Reference altitude</string>
     
+    <string name="use_sensbox_s">Utiliser le BT Flytech Sensbox</string>
+    <string name="use_sensbox_t">Utiliser Sensbox</string>
+    
     <string-array name="units_system_names">
         <item>Métrique</item>
         <item>Impérial</item>
