--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="altitude_from_gps">Altitude set from GPS: %1$s</string>
     <string name="use_sensbox_s">Use the BT Flytech Sensbox</string>
     <string name="use_sensbox_t">Use Sensbox</string>
+    <string name="initalizing_sensors">Initializing sensors</string>
     <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
