--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -110,6 +110,9 @@
     <string name="use_sensbox_s">Use the BT Flytech Sensbox</string>
     <string name="use_sensbox_t">Use Sensbox</string>
     <string name="initalizing_sensors">Initializing sensors</string>
+    <string name="sensbox_not_found">SensBox BT device was not found</string>
+    <string name="sensbox_not_supported">SensBox BT is not supported by your device</string>
+    <string name="sensbox_found">"SensBox BT found</string>
     <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
