--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,8 +99,6 @@
     <string name="location_history_t">Location history</string>
     <string name="heading_interval_s">Interval to recompute heading</string>
     <string name="heading_interval_t">Heading interval</string>
-    <string name="reference_altitude_s">Manual set reference altitude</string>
-    <string name="reference_altitude_t">Reference altitude</string>
     <string name="auto_track_s">Start tracking when application starts</string>
     <string name="auto_track_t">Auto start tracking</string>
     <string name="yes">Yes</string>
@@ -112,8 +110,13 @@
     <string name="initalizing_sensors">Initializing sensors</string>
     <string name="sensbox_not_found">SensBox BT device was not found</string>
     <string name="sensbox_not_supported">SensBox BT is not supported by your device</string>
-    <string name="sensbox_found">"SensBox BT found</string>
-<string-array name="units_system_names">
+    <string name="sensbox_found">SensBox BT found</string>
+    <string name="qnh_s">QNH</string>
+    <string name="qnh_t">Reference presure</string>
+    <string name="ref_alt_title">Current altitude</string>
+    <string name="ref_alt_description">Seting current altitude will make automatic computaion of QNH value. Please insert current altitude in meters.</string>
+
+    <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
     </string-array>
