--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -67,13 +67,13 @@
     <string name="volume_s">Volume du vario</string>
     <string name="use_speach_s">Utiliser la voix pour la vitesse vario</string>
     <string name="use_speach_t">Utiliser la voix</string>
-    <string name="beep_interval_s">Intervalle des bips sonores</string>
+    <string name="beep_interval_s">Intervalle des bips sonores (secondes)</string>
     <string name="beep_interval_t">Intervalle des bips</string>
     <string name="prenotify_interval_t">Intervalle de prénotification</string>
     <string name="prenotify_interval_s">Discrete sound around thermal interval</string>
-    <string name="sink_start_s">Seuil de descendance minimum</string>
+    <string name="sink_start_s">Seuil de descendance minimum (m/s)</string>
     <string name="sink_start_t">Début de la descendance</string>
-    <string name="lift_start_s">Seuil d\'ascendance minimum</string>
+    <string name="lift_start_s">Seuil d\'ascendance minimum (m/s)</string>
     <string name="lift_start_t">Début d\'ascendance</string>
     <string name="lift_hz_s">Tonalité d\'ascendance en Hz</string>
     <string name="lift_hz_t">Tonalité d\'ascendance</string>
