--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -117,6 +117,9 @@
     <string name="ref_alt_description">Setting current altitude will make automatic computaion of QNH value. Please insert current altitude in meters.</string>
     <string name="sound_type_s">Vario sound type</string>
     <string name="sound_type_t">Sound type</string>
+    <string name="sink_alarm_s">Sink speed to start alarm (m/s)</string>
+    <string name="sink_alarm_t">Sink alarm</string>
+    
 
     <string-array name="units_system_names">
         <item>Metric</item>
