--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -124,7 +124,8 @@
     <string name="orientation_t">Screen orientation</string>
     <string name="enable_logs_t">Logging</string>
     <string name="enable_logs_s">Enable logging in case of errors</string>
-
+    <string name="dont_forget_to_donate">You may donate if you like the application</string>
+    
     <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
