--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -123,8 +123,8 @@
     <string name="enable_logs_t">Logging</string>
     <string name="enable_logs_s">Enable logging in case of errors</string>
     <string name="dont_forget_to_donate">You may donate if you like the application</string>
-    
-    
+    <string name="thanks">Merci!</string>
+    <string name="donate">Donate</string>
     <string-array name="units_system_names">
         <item>Métrique</item>
         <item>Impérial</item>
