--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -125,6 +125,7 @@
 	<string name="dont_forget_to_donate">Donatiile sunt apreciate</string>
     <string name="thanks">Mare domn!</string>
     <string name="donate">Donate</string>
+    <string name="donate_not_available">Serviciul nu merge momentan</string>
     <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
