--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -127,6 +127,7 @@
     <string name="dont_forget_to_donate">You may donate if you like the application</string>
     <string name="thanks">Thank you!</string>
     <string name="donate">Donate</string>
+    <string name="donate_not_available">Donate service is currently not available</string>
     <string-array name="units_system_names">
         <item>Metric</item>
         <item>Imperial</item>
